--- a/hellopwa/manifest.json
+++ b/hellopwa/manifest.json
@@ -2,11 +2,11 @@
   "name": "PWA sample. Hello World",
   "short_name": "helloPWA",
   "icons": [{
-        "src": "https://github.com/naoya-ma/mockups/hellopwa/logo192.png",
+        "src": "https://naoya-ma.github.io/mockups/hellopwa/logo192.png",
         "sizes": "192x192",
         "type": "image/png"
       }],
-  "start_url": "https://github.com/naoya-ma/mockups/hellopwa/index.html",
+  "start_url": "https://naoya-ma.github.io/mockups/hellopwa/index.html",
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2"
